--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -20,7 +20,7 @@ packages:
 - "libpng12-dev"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/bluecoin/bluecoin.git"
+- "url": "https://github.com/bluecoiner/bluecoin.git"
   "dir": "bluecoin"
 files:
 - "miniupnpc-1.6.tar.gz"
@@ -44,7 +44,7 @@ script: |
   mkdir -p $OUTDIR/src
   git archive HEAD | tar -x -C $OUTDIR/src
   cp $OUTDIR/src/doc/README $OUTDIR
-  cp $OUTDIR/src/COPYING $OUTDIR
+  #cp $OUTDIR/src/COPYING $OUTDIR
   cd src
   make -f makefile.unix STATIC=1 OPENSSL_INCLUDE_PATH="$INSTDIR/include" OPENSSL_LIB_PATH="$INSTDIR/lib" $MAKEOPTS bluecoind USE_UPNP=1 DEBUGFLAGS=
   mkdir -p $OUTDIR/bin/$GBUILD_BITS
