--- a/contrib/gitian-descriptors/boost-win32.yml
+++ b/contrib/gitian-descriptors/boost-win32.yml
@@ -1,7 +1,7 @@
 ---
 name: "boost"
 suites:
-- "lucid"
+- "precise"
 architectures:
 - "i386"
 packages: 
@@ -24,7 +24,7 @@ script: |
         <cxxflags>-frandom-seed=boost1
   ;" > user-config.jam
   ./bootstrap.sh --without-icu
-  ./bjam toolset=gcc target-os=windows threadapi=win32 threading=multi variant=release link=static --user-config=user-config.jam --without-mpi --without-python -sNO_BZIP2=1 --layout=tagged --build-type=complete $MAKEOPTS stage
+  ./bjam toolset=gcc target-os=windows threadapi=win32 threading=multi variant=release link=static --user-config=user-config.jam --without-mpi --without-python -sNO_BZIP2=1 -sNO_ZLIB=1 --layout=tagged --build-type=complete $MAKEOPTS stage
   for lib in chrono date_time exception filesystem graph iostreams math_c99f math_c99l math_c99 math_tr1f math_tr1l math_tr1 prg_exec_monitor program_options random regex serialization signals system test_exec_monitor thread_win32 unit_test_framework wave wserialization; do
       mkdir $lib
       (cd $lib ; ar xf ../stage/lib/libboost_${lib}-mt-s.a)
