--- a/contrib/debian/examples/bluecoin.conf
+++ b/contrib/debian/examples/bluecoin.conf
@@ -1,9 +1,9 @@
-# bluecoin.conf configuration file. Lines beginning with # are comments.
+# chartreusecoin.conf configuration file. Lines beginning with # are comments.
 
 
 # Network-related settings:
 
-# Run on the test network instead of the real bluecoin network.
+# Run on the test network instead of the real chartreusecoin network.
 #testnet=1
 
 # Connect via a socks4 proxy
@@ -16,7 +16,7 @@
 # to specific peers:
 #connect=188.120.246.137:7777
 
-# Do not use Internet Relay Chat (irc.lfnet.org #bluecoin channel) to
+# Do not use Internet Relay Chat (irc.lfnet.org #chartreusecoin channel) to
 # find other peers.
 #noirc=1
 
@@ -26,7 +26,7 @@
 
 # JSON-RPC options (for controlling a running process)
 
-# server=1 tells bluecoin to accept JSON-RPC commands.
+# server=1 tells chartreusecoin to accept JSON-RPC commands.
 #server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
@@ -42,12 +42,12 @@
 # Listen for RPC connections on this TCP port:
 rpcport=8332
 
-# You can use bluecoin or bluecoind to send commands to bluecoin/bluecoind
+# You can use chartreusecoin or chartreusecoind to send commands to chartreusecoin/chartreusecoind
 # running on another host using this option:
 rpcconnect=127.0.0.1
 
 # Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with bluecoin -server or bluecoind
+# with chartreusecoin -server or chartreusecoind
 #rpcssl=1
 
 # OpenSSL settings used when rpcssl=1
@@ -58,14 +58,14 @@ rpcsslprivatekeyfile=server.pem
 
 # Miscellaneous options
 
-# Set gen=1 to attempt to generate bluecoins
+# Set gen=1 to attempt to generate chartreusecoins
 gen=0
 
 # Pre-generate this many public/private key pairs, so wallet backups will be valid for
 # both prior transactions and several dozen future transactions.
 keypool=100
 
-# Pay an optional transaction fee every time you send bluecoins.
+# Pay an optional transaction fee every time you send chartreusecoin.
 paytxfee=0.01
 
 # Allow direct connections for the 'pay via IP address' feature.
@@ -74,7 +74,7 @@ paytxfee=0.01
 
 # User interface options
 
-# Start bluecoin minimized
+# Start chartreusecoin minimized
 #min=1
 
 # Minimize to the system tray
